--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,19 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
+
 </head>
 <body>
-
+  <div class="header">
+      <div class="banner">
+           1000 | GIFTS
+      </div>
+      <div class="navigation">
+          HOME | ABOUT
+      </div>
+  </div>     
+        
 <%= yield %>
 
 </body>
