added static images and styles

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,10 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<div class="header">
+      <div class="banner">
+           1000 | GIFTS
+      </div>
+      <div class="navigation">
+          HOME | ABOUT
+      </div>
+  </div>
+  
+  FAQ Here
