--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,13 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+  <div class="header">
+      <div class="banner">
+           1000 | GIFTS
+      </div>
+      <div class="navigation">
+          HOME | ABOUT
+      </div>
+  </div> 
+  <div>
+    <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/image-3.png?w=290">
+    <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/i3dpn03t4n.jpg?w=290">
+    <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/img_0754.jpg?w=290">
+  </div>
