--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+    font-family: Lato;
+    font-size: 12px;
+   
+}
+
+.header {
+    background-color: #c0c5c3;
+    font-family: Lato;
+    font-size: 36px;
+    height: 100px;
+    display: block;
+    color: #343d46;
+}
+
+.banner {
+    display: inline-block;
+    font-size: 36px;
+}
+
+.navigation {
+    display: inline-block;
+    text-align: right;
+    float: right;
+    font-size: 12px;
+}
