--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,10 +1,2 @@
-<div class="header">
-      <div class="banner">
-           1000 | GIFTS
-      </div>
-      <div class="navigation">
-          HOME | ABOUT
-      </div>
-  </div> 
-  
-  About Us
+<% provide(:title, "About") %>
+About Us
