--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,10 +1,2 @@
-<div class="header">
-      <div class="banner">
-           1000 | GIFTS
-      </div>
-      <div class="navigation">
-          HOME | ABOUT
-      </div>
-  </div>
-  
-  FAQ Here
+<% provide(:title, "Help") %>
+FAQ Here
