--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,4 @@
-  <div class="header">
-      <div class="banner">
-           1000 | GIFTS
-      </div>
-      <div class="navigation">
-          HOME | ABOUT
-      </div>
-  </div> 
+ <% provide(:title, "Home") %>
   <div>
     <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/image-3.png?w=290">
     <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/i3dpn03t4n.jpg?w=290">
