--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,14 @@
 </head>
 <body>
     <div class="header">
-      <div class="banner">
-           1000 | GIFTS
-      </div>
-      <div class="navigation">
-          HOME | ABOUT
-      </div>
+        <p>One Thousand Gifts</p>
+        <p class="navigation">
+            <a href="/static_pages/home">HOME | </a>
+            <a href="/static_pages/about">ABOUT | </a>
+            <a href="/static_pages/help">HELP | </a>
+            <a href="/static_pages/contact">CONTACT</a>
+        </p>
     </div>
-  
-<%= yield %>
-
+    <%= yield %>
 </body>
 </html>
