added landing page graphics

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-body {
+/*body {
     font-family: Lato;
     font-size: 12px;
    
@@ -26,7 +26,7 @@ body {
     text-align: right;
     float: right;
     font-size: 12px;
-}
+}*/
 .image_grid {
     padding: 15px;
     float: left;
