--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,8 @@
- <% provide(:title, "Home") %>
-  <div>
+<% provide(:title, "Home") %>
+<!-- <img class="push_width" src="https://images.unsplash.com/photo-1431263154979-0982327fccbb?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=599bea292ab05fc659769e010a3d2cba"> -->
+<img class="push_width" src="https://images.unsplash.com/photo-1445462836468-7682cfd62e76?crop=entropy&fit=crop&fm=jpg&h=925&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925">
+  <!-- <div>
     <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/image-3.png?w=290">
     <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/i3dpn03t4n.jpg?w=290">
     <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/img_0754.jpg?w=290">
-  </div>
+  </div> -->
