added new landing page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,18 @@
 <% provide(:title, "Home") %>
-<!-- <img class="push_width" src="https://images.unsplash.com/photo-1431263154979-0982327fccbb?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=599bea292ab05fc659769e010a3d2cba"> -->
-<img class="push_width" src="https://images.unsplash.com/photo-1445462836468-7682cfd62e76?crop=entropy&fit=crop&fm=jpg&h=925&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925">
-  <!-- <div>
+<!-- Landing page for non-logged in users -->
+<div class="jumbotron">
+    <div class="container">
+      <div class="call_to_action">
+        <h2>Save the parts of your life that matter most</h2>
+        <hr>
+        <h1>Transform Your Life</h1>
+        <p><a href="#" class="btn btn-success btn-lg">Gift Board +</a></p>
+      </div>
+    </div>
+</div>
+
+<!-- image grid for logged in users
+<div>
     <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/image-3.png?w=290">
     <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/i3dpn03t4n.jpg?w=290">
     <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/img_0754.jpg?w=290">
