--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,7 @@
 /*General*/
 body {
   padding-top: 60px;
+  color: #000000;
 }
 
 section {
@@ -14,13 +15,24 @@ textarea {
   resize: vertical;
 }
 h1 {
-  font-family: Quicksand;
+  font-family: Lora;
+  font-size: 36px;
+}
+h2 {
+  font-family: Open Sans;
+  font-size: 20px;
+}
+h3 {
+  font-family: Homemade Apple;
+  font-size: 20px;
+}
+hr {
+  border-color: #1B1515;
 }
 /*Navigation*/
 .navbar {
     background-color: #fff;
 }
-
 .push_width {
     width: 100%;
     height: auto;
@@ -31,6 +43,28 @@ h1 {
     padding: 15px;
     float: left;
 }
-
+.jumbotron {
+  /* add bootstrap jumbotron background image */
+    background: url("https://images.unsplash.com/photo-1445462836468-7682cfd62e76?crop=entropy&fit=crop&fm=jpg&h=925&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925");
+    /* change bootstrap jumbotron text color */
+    width: 100%;
+    height: 800px;
+    color: #1B1515;
+}
+.call_to_action {
+  text-align: center;
+  padding: 20%;
+}
+.image_grid {
+    padding: 15px;
+    float: left;
+}
+.btn {
+  color: #1B1515;
+  background: rgba(255, 255, 255, 0.1);
+  border-color: #1B1515;
+  border-radius: 0;
+  
+}
 /*Typography*/
 /*Footer*/
