--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -52,8 +52,8 @@ hr {
     color: #1B1515;
 }
 .call_to_action {
-  text-align: center;
-  padding: 20%;
+  /*text-align: center;*/
+  padding-top: 20%;
 }
 .image_grid {
     padding: 15px;
@@ -68,3 +68,31 @@ hr {
 }
 /*Typography*/
 /*Footer*/
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+
+footer a {
+  color: #555;
+}
+
+footer a:hover {
+  color: #222;
+}
+
+footer small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li {
+  float: left;
+  margin-left: 15px;
+}
