--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,19 +1,3 @@
 <% provide(:title, "Home") %>
-<!-- Landing page for non-logged in users -->
-<div class="jumbotron">
-    <div class="container">
-      <div class="call_to_action">
-        <h2>Save the parts of your life that matter most</h2>
-        <hr>
-        <h1>Transform Your Life</h1>
-        <p><a href="#" class="btn btn-success btn-lg">Gift Board +</a></p>
-      </div>
-    </div>
-</div>
-
-<!-- image grid for logged in users
-<div>
-    <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/image-3.png?w=290">
-    <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/i3dpn03t4n.jpg?w=290">
-    <img class="image_grid" src="https://diversionfruit.files.wordpress.com/2016/03/img_0754.jpg?w=290">
-  </div> -->
+<%= render 'layouts/jumbo' %>
+<!-- <%= render 'layouts/image_grid' %> -->
