--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= render 'layouts/shim' %>
 </head>
 <body>
-    <%= render 'layouts/header' %>
+    <%= render 'layouts/header_b' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
 </body>
