--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, "Home") %>
-<%= render 'layouts/jumbo' %>
+<%= render 'layouts/jumbo_b' %>
 <!-- <%= render 'layouts/image_grid' %> -->
